...
                    .setVideoMimeType(MimeTypes.VIDEO_H264)
                    .setEncoderFactory(encoderFactoryBuilder.build())
                    .addListener(
                        new Transformer.Listener() {
                            @Override
                            public void onCompleted(final Composition composition, final ExportResult exportResult) {
                                listener.onProgress(1.0, "completed", "Re-encoding completed.");
                                completionLatch.countDown();
                            }

                            @Override
                            public void onError(
                                final Composition composition,
...
